@@ -4,6 +4,7 @@ See the end for copying conditions.
 
 - 1.9 | NOT YET RELEASED
   - new command: ‘aa2u-mark-rectangle-as-text’
+  - new homepage: http://www.gnuvola.org/software/aa2u/
 
 - 1.8 | 2014-05-21
   - new command: ‘aa2u-mark-as-text’
